--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
-APP_NAME=TIPOFF
+APP_NAME=Apparel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://tipoff.test
+APP_URL=http://apparel.test
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=tipoff
+DB_DATABASE=apparel
 DB_USERNAME=root
 DB_PASSWORD=
 
